# boinc-haskell

./: Boinc.cabal  README
Boinc/: API.chs
Boinc/.svn/: all-wcprops  entries
Boinc/.svn/text-base/: API.chs.svn-base
example/: test.hs
